set(LIBNAME Mavlink)

FILE(GLOB INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
FILE(GLOB INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)

#add_library(${LIBNAME} STATIC ${SOURCES} ${INCLUDES})
#install(TARGETS ${LIBNAME} DESTINATION lib)
install(FILES ${INCLUDES} DESTINATION include/mavlink)

if(${DEPLOY_SOURCE_FILES_TO_REMOTE} MATCHES "yes")
    add_deployment_source_directory(${CMAKE_CURRENT_SOURCE_DIR} "src")
endif()
