
file(GLOB files "./*.cpp")
foreach(file ${files} )
    get_filename_component(bfile ${file} NAME_WE)
    add_executable(${bfile} ${file})
    if (UNIX)
        target_link_libraries(${bfile} ${COSMOS_LIBS})
        add_deployment_binary(${bfile} "bin")
        #add_deployment_source(${bfile}.cpp "src")
    else()
        target_link_libraries(${bfile} ${COSMOS_LIBS})
    endif()
    install(TARGETS ${bfile} DESTINATION bin)
endforeach()
